# line-drawer-3d-3-in-1-opengl-sdl3-c

./: .gitignore  CMakeLists.txt  README.md  build-apk.bat  build-exe.bat  build-wasm.bat  config-exe.bat  install-apk.bat  run-exe.bat
android-project/app/: build.gradle
android-project/app/src/main/: AndroidManifest.xml
android-project/app/src/main/java/com/example/sdlcross/: MyActivity.java
assets/shaders/: shader.frag  shader.vert
public/: index.html
src/: file_utils.c  file_utils.h  line_drawer.c  line_drawer.h  main.c  main.cpp  math_helper.c  math_helper.h  shader_program.c  shader_program.h
